------------------------------------------------------------------------
r1763 | gaser | 2021-02-11 09:27:14

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_extopts.m
RM      cat_vol_ROI_summarize.m
M       html/cat.html

Changed: Updated help text.
------------------------------------------------------------------------
r1762 | gaser | 2021-02-11 01:14:55 +0100 (Do, 11 Feb 2021) | 12 lines

Changed paths:
M       CHANGES.txt
MM      cat_vol_ROI_summarize.m
M       development/Template_0_GS1mm.nii
M       development/Template_1_GS1mm.nii
M       development/Template_2_GS1mm.nii
M       development/Template_3_GS1mm.nii
M       development/Template_4_GS1mm.nii

Changed: Updated 1mm GS-Templates in development folder to new bounding box.


------------------------------------------------------------------------
r1761 | gaser | 2021-02-11 00:47:37 +0100 (Do, 11 Feb 2021) | 44 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_conf_output.m
M       cat_io_writenii.m
M       cat_main_reportfig.m
M       cat_main_write.m
M       cat_vol_set_com.m
M       templates_MNI152NLin2009cAsym/Schaefer2018_100Parcels_17Networks_order.nii
M       templates_MNI152NLin2009cAsym/Schaefer2018_200Parcels_17Networks_order.nii
M       templates_MNI152NLin2009cAsym/Schaefer2018_400Parcels_17Networks_order.nii
M       templates_MNI152NLin2009cAsym/Schaefer2018_600Parcels_17Networks_order.nii
M       templates_MNI152NLin2009cAsym/Template_0_GS.nii
M       templates_MNI152NLin2009cAsym/Template_1_Dartel.nii
M       templates_MNI152NLin2009cAsym/Template_1_GS.nii
M       templates_MNI152NLin2009cAsym/Template_2_Dartel.nii
M       templates_MNI152NLin2009cAsym/Template_2_GS.nii
M       templates_MNI152NLin2009cAsym/Template_3_Dartel.nii
M       templates_MNI152NLin2009cAsym/Template_3_GS.nii
M       templates_MNI152NLin2009cAsym/Template_4_Dartel.nii
M       templates_MNI152NLin2009cAsym/Template_4_GS.nii